--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             <img class="img-responsive"src="img/fasolka.jpg" alt="czerwona fasola">
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+        </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
