add to content text and class ingredient

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
             <img class="img-responsive"src="img/fasolka.jpg" alt="czerwona fasola">
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
+        <div class="row text-center ingredient">
+          <div class="col-md-4">
+            <p>Fasolka</p></div>
+          <div class="col-md-4">
+            <p>Garnek</p></div>
+          <div class="col-md-4">
+            <p>Woda</p>
+          </div>
         </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
