add icon to ingredient

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
         <div class="row text-center ingredient">
           <div class="col-md-4">
+            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
             <p>Fasolka</p></div>
           <div class="col-md-4">
             <p>Garnek</p></div>
