--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
             <p>Fasolka</p></div>
           <div class="col-md-4">
+            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
             <p>Garnek</p></div>
+            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
           <div class="col-md-4">
             <p>Woda</p>
           </div>
