--- a/index.html
+++ b/index.html
@@ -44,19 +44,24 @@
           <div class="row">
             <img class="img-responsive"src="img/fasolka.jpg" alt="czerwona fasola">
           </div>
-        </div>
-        <div class="row text-center ingredient">
-          <div class="col-md-4">
-            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
-            <p>Fasolka</p></div>
-          <div class="col-md-4">
-            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
-            <p>Garnek</p></div>
-            <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
-          <div class="col-md-4">
-            <p>Woda</p>
+          <div class="row text-center ingredient">
+            <div class="col-md-4">
+              <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
+              <p>Fasolka</p></div>
+            <div class="col-md-4">
+              <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
+              <p>Garnek</p></div>
+              <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>
+            <div class="col-md-4">
+              <p>Woda</p>
+            </div>
+          </div>
+          <div class="row recipe">
+            <div class="col-md-6">.col-md-6</div>
+            <div class="col-md-6">.col-md-6</div>
           </div>
         </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
