--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
             </div>
           </div>
           <div class="row recipe">
-            <div class="col-md-6">.col-md-6</div>
+            <div class="col-md-6">
+              <h3>1. Lorem ipsum dolor sit amet</h3>
+              <p>Consectetur adipiscing elit. Nulla rhoncus, elit eget scelerisque pharetra, arcu nisl euismod turpis, non fringilla massa arcu id lacus. Fusce eu sollicitudin justo, nec consequat sem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam aliquet felis nec scelerisque vehicula. Fusce efficitur dui maximus nunc ultrices posuere. Morbi at eros lorem. Nunc blandit vitae leo et dapibus.</p>
+            </div>
             <div class="col-md-6">.col-md-6</div>
           </div>
         </div>
