--- a/index.html
+++ b/index.html
@@ -60,8 +60,28 @@
             <div class="col-md-6">
               <h3>1. Lorem ipsum dolor sit amet</h3>
               <p>Consectetur adipiscing elit. Nulla rhoncus, elit eget scelerisque pharetra, arcu nisl euismod turpis, non fringilla massa arcu id lacus. Fusce eu sollicitudin justo, nec consequat sem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam aliquet felis nec scelerisque vehicula. Fusce efficitur dui maximus nunc ultrices posuere. Morbi at eros lorem. Nunc blandit vitae leo et dapibus.</p>
+              <h3>2. Lorem ipsum dolor sit amet</h3>
+              <p>Consectetur adipiscing elit. Nulla rhoncus, elit eget scelerisque pharetra, arcu nisl euismod turpis, non fringilla massa arcu id lacus. Fusce eu sollicitudin justo, nec consequat sem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam aliquet felis nec scelerisque vehicula. Fusce efficitur dui maximus nunc ultrices posuere. Morbi at eros lorem. Nunc blandit vitae leo et dapibus.</p>
+              <h3>3. Lorem ipsum dolor sit amet</h3>
+              <p>Consectetur adipiscing elit. Nulla rhoncus, elit eget scelerisque pharetra, arcu nisl euismod turpis, non fringilla massa arcu id lacus. Fusce eu sollicitudin justo, nec consequat sem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam aliquet felis nec scelerisque vehicula. Fusce efficitur dui maximus nunc ultrices posuere. Morbi at eros lorem. Nunc blandit vitae leo et dapibus.</p>
             </div>
-            <div class="col-md-6">.col-md-6</div>
+            <div class="col-md-6 text-center">
+              <img class="img-circle" src="http://bartsimpsonpictures.squarelogic.net/bart-simpson-11.gif" alt="bart">
+              <p>Bart</p>
+              <div class="progress">  <div class="progress-bar" role="progressbar" aria-valuenow="70"  aria-valuemin="0" aria-valuemax="100" style="width:70%">    70%  </div>
+              </div>
+              <div class="form-group">
+                  <label for="usr">Email:</label>
+                  <input type="text" class="form-control" id="usr">
+              </div>
+              <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" id="pwd">
+              </div>
+               <div class="form-group">
+                 <input type="submit" class="form-control" value="Submit">
+               </div>
+            </div>
           </div>
         </div>
 
