--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                </div>
             </div>
           </div>
+          <footer class="row text-center">
+            <p>&copy; 2017 Lukasz Kolacz | akademiakodu.pl</p>
+          </footer>
         </div>
 
 
